--- a/arch/arm/configs/custom_n8000_defconfig
+++ b/arch/arm/configs/custom_n8000_defconfig
@@ -409,7 +409,12 @@ CONFIG_MIDAS_COMMON=y
 #
 # Support dynamic CPU Hotplug
 #
-# CONFIG_EXYNOS_PM_HOTPLUG is not set
+CONFIG_EXYNOS_PM_HOTPLUG=y
+CONFIG_STAND_ALONE_POLICY=y
+# CONFIG_LEGACY_HOTPLUG_POLICY is not set
+# CONFIG_WITH_DVFS_POLICY is not set
+# CONFIG_DVFS_NR_RUNNING_POLICY is not set
+# CONFIG_NR_RUNNING_POLICY is not set
 
 #
 # Busfreq Model
