--- a/arch/arm/configs/custom_n7000_defconfig
+++ b/arch/arm/configs/custom_n7000_defconfig
@@ -405,8 +405,8 @@ CONFIG_EXYNOS4210_1400MHZ_SUPPORT=y
 # Support dynamic CPU Hotplug
 #
 CONFIG_EXYNOS_PM_HOTPLUG=y
-CONFIG_STAND_ALONE_POLICY=y
-# CONFIG_LEGACY_HOTPLUG_POLICY is not set
+# CONFIG_STAND_ALONE_POLICY is not set
+CONFIG_LEGACY_HOTPLUG_POLICY=y
 # CONFIG_WITH_DVFS_POLICY is not set
 # CONFIG_DVFS_NR_RUNNING_POLICY is not set
 # CONFIG_NR_RUNNING_POLICY is not set
@@ -652,7 +652,7 @@ CONFIG_PREEMPT=y
 CONFIG_HZ=200
 # CONFIG_THUMB2_KERNEL is not set
 CONFIG_AEABI=y
-CONFIG_OABI_COMPAT=y
+# CONFIG_OABI_COMPAT is not set
 # CONFIG_ARCH_SPARSEMEM_DEFAULT is not set
 # CONFIG_ARCH_SELECT_MEMORY_MODEL is not set
 CONFIG_HAVE_ARCH_PFN_VALID=y
