--- a/arch/arm/configs/custom_n7100_defconfig
+++ b/arch/arm/configs/custom_n7100_defconfig
@@ -2169,7 +2169,7 @@ CONFIG_LSI_HDMI_AUDIO_CH_EVENT=y
 CONFIG_VIDEO_MFC5X=y
 CONFIG_VIDEO_MFC_MAX_INSTANCE=4
 # CONFIG_VIDEO_MFC5X_DEBUG is not set
-CONFIG_USE_MFC_CMA=y
+# CONFIG_USE_MFC_CMA is not set
 CONFIG_VIDEO_FIMG2D=y
 # CONFIG_VIDEO_FIMG2D_DEBUG is not set
 CONFIG_VIDEO_FIMG2D4X=y
